<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="3"
    android:rowCount="1">
    <RelativeLayout
        android:layout_column="0"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingBottom="50dp">
        <Button
            android:id="@+id/button_camera"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:text="@string/action_camera_short"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_column="1"
        android:layout_gravity="fill"
        android:orientation="vertical"
        android:padding="10dp">
        <ImageView
            android:id="@+id/image_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/colored_bounds" />
        <SeekBar
            android:id="@+id/seekbar_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_column="2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingBottom="20dp">
        <GridLayout
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:rowCount="3">
            <Button android:id="@+id/button_fwd"
                android:layout_column="1"
                android:layout_row="0"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:text="@string/action_forward_short"/>
            <Button android:id="@+id/button_left"
                android:layout_column="0"
                android:layout_row="1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:text="@string/action_left_short"/>
            <Button android:id="@+id/button_right"
                android:layout_column="2"
                android:layout_row="1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:text="@string/action_right_short"/>
            <Button android:id="@+id/button_bwd"
                android:layout_column="1"
                android:layout_row="2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:text="@string/action_backward_short"/>
        </GridLayout>
    </RelativeLayout>
</GridLayout>
